# movable_do_solfege_generator

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: midi_transcription.ipynb  separation_by_mdx.ipynb  tuning_correction.ipynb
solfege_app/: __init__.py  config.py  jobs.py
solfege_app/pipeline/: beat_grid.py  key_estimation.py  motif.py  note_assignment.py  orchestrator.py  separation.py  solfege.py  transcription.py
static/: app.js  style.css
templates/: index.html
